--- a/Packages/jp.keijiro.dkvfx/Editor/Dkvfx.Editor.asmdef
+++ b/Packages/jp.keijiro.dkvfx/Editor/Dkvfx.Editor.asmdef
@@ -3,8 +3,9 @@
     "references": [
         "GUID:1c5aa4dd6ccceb2bab62d4ac2e9bb5d8"
     ],
-    "optionalUnityReferences": [],
-    "includePlatforms": [],
+    "includePlatforms": [
+        "Editor"
+    ],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
