--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "com.unity.render-pipelines.high-definition": "7.1.6",
     "com.unity.timeline": "1.2.6",
-    "jp.keijiro.klak.motion": "1.0.1"
+    "jp.keijiro.klak.motion": "1.0.1",
+    "jp.keijiro.dkvfx": "0.1.2"
   }
 }
